# personal_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml
new_handler/: new_handler.py
weatherbot/: __main__.py  bot.py  config.py  models.py  notify.py
