[tool.poetry]
name = "personal-project"
version = "0.1.0"
description = ""
authors = ["Aleksandr <mendelev.basic@gmail.com>"]
readme = "README.md"
packages = [{include = "personal_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
