[tool.poetry]
name = "personal-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "personal_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytelegrambotapi = "^4.12.0"
requests = "^2.23.0"
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
